# Radix

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  c.bnf  compile_commands.json  config.json  plotting.md  test.lua
cmake/: FindGMP.cmake
docs/: Makefile
docs/html/: annotated.html  classes.html  classradix_1_1Equation.html  classradix_1_1EquationBase.html  classradix_1_1Function.html  classradix_1_1Long.html  classradix_1_1Value.html  classradix_1_1Variable.html  dir_05fa87af27b82cad74fc608ece0cdebc.html  dir_18006b59cb4edd4da75ca08871b4ef14.html  dir_1ab31cb45db5038bdda41b72d8600e0e.html  dir_2f19006998437fcd6ccc278ce3a85d4f.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_6f2556fe0c32c9fab74b79cf5f297595.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_c0d43baa5074a7e111d347c0db907161.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e5e775d875e2ff32ff98417fbb2175f9.html  equation_8hpp_source.html  equation__base_8hpp_source.html  files.html  function_8hpp_source.html  hierarchy.html  index.html  long_8hpp_source.html  menudata.js  radix_8hpp_source.html  value_8hpp_source.html  variable_8hpp_source.html
docs/latex/: annotated.tex  hierarchy.tex  (+20 more)
include/: equation.hpp  equation_base.hpp  eval.hpp  expression.hpp  expression_base.hpp  lexer.hpp  long.hpp  radix.hpp  token.hpp  utility.hpp
source/: equation.cpp  equation_base.cpp  eval.cpp  expression.cpp  expression_base.cpp  expression_old  lexer.cpp  long.cpp  main.cpp  token.cpp
src/: lexer.cpp  lexer.hpp  log.hpp  main.cpp  parser.cpp  parser.hpp  radix.cpp  radix.hpp
(+69 files in other folders)
