CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(Radix)

SET(CMAKE_CXX_COMPILER clang++)
SET(CMAKE_CXX_STANDARD 17)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/src")
FILE(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR} "src/*.cpp")
LIST(REMOVE_ITEM SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp")
ADD_LIBRARY(radix ${SRC_FILES})

ADD_EXECUTABLE(radix.exe "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp")
TARGET_LINK_LIBRARIES(radix.exe radix)

IF (EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json")
  EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json
    ${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json
    )
ENDIF()
